--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,15 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!--Added google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Montserrat:ital,wght@1,700&family=Nanum+Myeongjo:wght@700&family=Open+Sans:ital,wght@1,600&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Montserrat:ital,wght@1,700&family=Nanum+Myeongjo:wght@700&family=Open+Sans:ital,wght@1,600&family=Tenor+Sans&display=swap" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
