- Added Grommet design system package - Changed fonts, added background image - Added pagination and header - Moved files and changed imports

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,7 @@
     <!--Added google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Montserrat:ital,wght@1,700&family=Nanum+Myeongjo:wght@700&family=Open+Sans:ital,wght@1,600&display=swap" rel="stylesheet">
-
-    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Montserrat:ital,wght@1,700&family=Nanum+Myeongjo:wght@700&family=Open+Sans:ital,wght@1,600&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Quicksand&display=swap" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
